style:: try to fix pre rendering on mobile

--- a/site-assets/style.css
+++ b/site-assets/style.css
@@ -82,7 +82,8 @@ figure {
 }
 
 figure > pre {
-    min-width: 37.3em;
+    min-width: 100%;
+    box-sizing: border-box;
     display: inline-block;
 }
 
@@ -90,7 +91,6 @@ figure audio {
     width: 100%;
     border-radius: 0.175em;
 }
-    
 
 figure img {
     border-radius: 0.35em;
